fix cursor position when jumping to point, style

--- a/src/scss/_timeline.scss
+++ b/src/scss/_timeline.scss
@@ -11,7 +11,7 @@
     position: absolute;
     z-index: 2;
     width: 2px;
-    height: calc(100% + 22px);
+    height: 100%;
     bottom: 0;
     left: -1px;
     background: rgb(80, 153, 255);
