--- a/src/scss/_tracks.scss
+++ b/src/scss/_tracks.scss
@@ -95,6 +95,7 @@
     border-left: 2px solid rgb(200,200,200);
     background: rgb(235,235,235);
     cursor: grab;
+    z-index: 3;
 }
 
 
